# DroneProjects

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Project_scope.md  README.md  REALSENSE.md
.claude/: project-config.json  settings.json
Planning/: Phase-1-Foundation.md  Phase-2-Environment-Mission-Design.md  Phase-3-Action-Vocabulary.md  Phase-4-LLM-Integration.md  Phase-5-Dynamic-Replanning.md  Phase-6-Validation-Deployment.md  README.md
deployment/: CLAUDE.md
docker/: Dockerfile.d455  Dockerfile.t265  README.md
flyby/: .gitkeep  README.md
flyby-f11/: .cleanup_plan.md  AI_AGENT_GUIDE.md  APPROACH.qmd  CONTAINERIZATION_STRATEGY.md  IMPLEMENTATION_ROADMAP.qmd  ONTOLOGY_FOUNDATION.qmd  QUICK_START.md  README.md  SYSTEM_CONSTRAINTS.qmd
flyby-f11/ros2_ws/src/behavior_trees/: CMakeLists.txt
flyby-f11/ros2_ws/src/behavior_trees/config/: bt_params.yaml
flyby-f11/ros2_ws/src/behavior_trees/include/behavior_trees/bt_nodes/: action_nodes.hpp
flyby-f11/ros2_ws/src/behavior_trees/launch/: bt_executor.launch.py
flyby-f11/ros2_ws/src/behavior_trees/src/: bt_executor_node.cpp
flyby-f11/ros2_ws/src/behavior_trees/src/bt_nodes/: action_nodes.cpp
flyby-f11/ros2_ws/src/local_avoidance/: package.xml
flyby-f11/ros2_ws/src/local_avoidance/include/local_avoidance/: octomap_manager.hpp  vfh3d.hpp
flyby-f11/ros2_ws/src/local_avoidance/launch/: avoidance.launch.py
flyby-f11/ros2_ws/src/local_avoidance/src/: vfh3d.cpp
flyby-f11/ros2_ws/src/local_avoidance/test/: test_octomap_manager.cpp  test_vfh3d.cpp
flyby-f11/ros2_ws/src/mission_orchestrator/: CMakeLists.txt
flyby-f11/ros2_ws/src/mission_orchestrator/action/: ExecuteMission.action
flyby-f11/ros2_ws/src/mission_orchestrator/launch/: mission_orchestrator.launch.py
flyby-f11/ros2_ws/src/mission_orchestrator/mission_orchestrator/: __init__.py  mission_manager_node.py  mission_state_machine.py  safety_monitor.py
flyby-f11/ros2_ws/src/mission_orchestrator/msg/: MissionPlan.msg  SafetyState.msg  Waypoint.msg
flyby-f11/ros2_ws/src/mission_orchestrator/srv/: VerifyMission.srv
flyby-f11/ros2_ws/src/mission_orchestrator/test/: __init__.py  test_mission_state_machine.py
flyby-f11/ros2_ws/src/ontology_rl/: package.xml  setup.py
flyby-f11/ros2_ws/src/ontology_rl/config/: behavior_selector.yaml  mission_planner.yaml  trajectory_optimizer.yaml
flyby-f11/ros2_ws/src/ontology_rl/launch/: training.launch.py
flyby-f11/ros2_ws/src/ontology_rl/ontology_rl/envs/: __init__.py
flyby-f11/ros2_ws/src/ontology_rl/ontology_rl/nodes/: __init__.py
flyby-f11/ros2_ws/src/ontology_rl/ontology_rl/training/: config.py
flyby-f11/ros2_ws/src/ontology_rl/ontology_rl/utils/: __init__.py  world_loader.py
flyby-f11/ros2_ws/src/ontology_rl/ontology_rl/wrappers/: ros2_gym_bridge.py
flyby-f11/ros2_ws/src/ontology_rl/test/: test_env_creation.py
flyby-f11/ros2_ws/src/path_planning/: CMakeLists.txt
flyby-f11/ros2_ws/src/path_planning/include/path_planning/: global_planner.hpp  nfz_manager.hpp  trajectory_controller.hpp
flyby-f11/ros2_ws/src/path_planning/launch/: path_planning.launch.py
flyby-f11/ros2_ws/src/path_planning/src/: global_planner.cpp  global_planner_node.cpp  trajectory_controller.cpp  trajectory_controller_node.cpp
flyby-f11/ros2_ws/src/vampire_bridge/: CMakeLists.txt  package.xml  setup.py
flyby-f11/ros2_ws/src/vampire_bridge/config/: vampire_params.yaml
flyby-f11/ros2_ws/src/vampire_bridge/msg/: ReasoningResult.msg
flyby-f11/ros2_ws/src/vampire_bridge/test/: test_cache_manager.py  test_concurrent_queries.py  test_query_builder.py
flyby-f11/ros2_ws/src/vampire_bridge/vampire_bridge/: __init__.py  cache_manager.py  cold_fact_cache.py  result_parser.py  vampire_node.py
isaac-sim/: .gitignore  CLAUDE.md  Containerfile  Containerfile.phase6f  README.md  podman-compose.yml
ontology/: CLAUDE.md  Containerfile.planning  README.md
project-drone/ros2_ws/src/agents_perception/: CMakeLists.txt  package.xml
project-drone/ros2_ws/src/agents_perception/agents_perception/: __init__.py
project-drone/ros2_ws/src/agents_perception/launch/: realsense.launch.py
project-drone/ros2_ws/src/hometestdrone_slam/: CMakeLists.txt
ros2_ws/src/flyby_autonomy/: package.xml  setup.py
ros2_ws/src/flyby_autonomy/flyby_autonomy/: ontology_controller_node.py
ros2_ws/src/flyby_f11_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/flyby_f11_bringup/config/: gz_bridges.yaml
ros2_ws/src/flyby_f11_bringup/flyby_f11_bringup/: __init__.py
ros2_ws/src/flyby_f11_bringup/launch/: f11_isr.launch.py  isaac_sim_bridge.launch.py  navigation.launch.py
ros2_ws/src/flyby_f11_sensors/: CMakeLists.txt  package.xml
ros2_ws/src/flyby_f11_sensors/config/: gimbal_params.yaml
ros2_ws/src/flyby_f11_sensors/flyby_f11_sensors/: __init__.py
ros2_ws/src/flyby_f11_sensors/launch/: isr_camera.launch.py  sensors_all.launch.py
ros2_ws/src/flyby_f11_sensors/msg/: GimbalState.msg  ISRCameraState.msg
ros2_ws/src/flyby_f11_sensors/test/: test_gimbal_controller.py
ros2_ws/src/local_avoidance/: CMakeLists.txt
ros2_ws/src/local_avoidance/config/: avoidance_params.yaml
ros2_ws/src/local_avoidance/include/local_avoidance/: corridor_detector.hpp  safety_buffer.hpp  vfh3d.hpp
ros2_ws/src/local_avoidance/src/: corridor_detector.cpp  local_avoidance_node.cpp  octomap_manager.cpp  vfh3d.cpp
ros2_ws/src/mission_orchestrator/: package.xml
ros2_ws/src/mission_orchestrator/config/: orchestrator_params.yaml
ros2_ws/src/mission_orchestrator/msg/: MissionStatus.msg
ros2_ws/src/mission_orchestrator/srv/: StartMission.srv
ros2_ws/src/mission_orchestrator/test/: test_mission_lifecycle.py
ros2_ws/src/rl_inference/: CMakeLists.txt
ros2_ws/src/rl_inference/config/: inference_params.yaml
ros2_ws/src/rl_inference/include/rl_inference/: policy_interface.hpp  tensorrt_policy.hpp
ros2_ws/src/rl_inference/launch/: rl_inference.launch.py
ros2_ws/src/rl_inference/src/: tensorrt_policy.cpp
test-drone/ros2_ws/src/hometestdrone_behaviors/: CMakeLists.txt
test-drone/ros2_ws/src/hometestdrone_behaviors/behavior_trees/: explore_and_map.xml
(+801 files in other folders)
