<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flyby_f11_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for Flyby F-11 UAV simulation and deployment</description>
  <maintainer email="finley@example.com">Finley Holt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>

  <!-- Sensor packages -->
  <depend>flyby_f11_sensors</depend>

  <!-- NOTE: vampire_bridge and mission_orchestrator dependencies
       commented out for initial testing. Uncomment when those
       packages are needed for full integration. -->
  <!-- <depend>vampire_bridge</depend> -->
  <!-- <depend>mission_orchestrator</depend> -->

  <!-- Gazebo and ROS 2 bridge -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- Standard sensor messages -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
