<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_avoidance</name>
  <version>0.1.0</version>
  <description>3D-VFH+ local obstacle avoidance for Flyby F-11 UAV</description>
  <maintainer email="finley@example.com">Finley Holt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>

  <!-- Custom messages -->
  <depend>flyby_msgs</depend>

  <!-- OctoMap for 3D mapping -->
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <!-- PCL for point cloud processing -->
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
