<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ontology_rl</name>
  <version>0.1.0</version>
  <description>Gymnasium-based RL training environments for F-11 ontology-constrained autonomy</description>
  <maintainer email="finley@example.com">Finley Holt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <!-- NOTE: vampire_bridge and mission_orchestrator are optional runtime dependencies
       that enhance functionality but are not required for building or standalone use.
       The environments gracefully handle their absence. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
